# golfir

./: .gitignore  .travis.yml  CITATION.cff  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
golfir/: catalog.py  irac.py  model.py  pipeline.py  utils.py  version.py
golfir/data/: bcd_ch1.header  bcd_ch2.header  bcd_ch3.header  bcd_ch4.header  libralato_hawki_chip1.crpix.header  libralato_hawki_chip2.crpix.header  libralato_hawki_chip3.crpix.header  libralato_hawki_chip4.crpix.header  make_headers.py
golfir/data/psf/: README.md  irac_ch1_cold_0_psf.fits  irac_ch1_cold_1_psf.fits  irac_ch1_cold_psf.fits  irac_ch1_warm_0_psf.fits  irac_ch1_warm_1_psf.fits  irac_ch1_warm_2_psf.fits  irac_ch1_warm_3_psf.fits  irac_ch1_warm_4_psf.fits  irac_ch1_warm_5_psf.fits  irac_ch1_warm_6_psf.fits  irac_ch1_warm_7_psf.fits  irac_ch1_warm_8_psf.fits  irac_ch1_warm_psf.fits  irac_ch2_cold_0_psf.fits  irac_ch2_cold_1_psf.fits  irac_ch2_cold_psf.fits  irac_ch2_warm_0_psf.fits  irac_ch2_warm_1_psf.fits  irac_ch2_warm_2_psf.fits  irac_ch2_warm_3_psf.fits  irac_ch2_warm_4_psf.fits  irac_ch2_warm_5_psf.fits  irac_ch2_warm_6_psf.fits  irac_ch2_warm_7_psf.fits  irac_ch2_warm_8_psf.fits  irac_ch2_warm_psf.fits  irac_ch3_cold_0_psf.fits  irac_ch3_cold_1_psf.fits  irac_ch3_cold_psf.fits  irac_psf_log.txt  (+10 more)
golfir/other/: legacysurveys.py
golfir/tests/: test_model.py  test_utils.py
golfir/vlt/: archive.py  hawki.py
notebooks/: IRAC-fit-patches.ipynb  IRAC-mosaic.ipynb  IRAC-photometry.ipynb
scripts/: model.py
