[metadata]
name = golfir
author = G. Brammer
author_email = gbrammer@gmail.com
description = Great Observatories Legacy Fields: IR tools
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/gbrammer/golfir
license = MIT
license_files = LICENSE
project_urls =
    Documentation = https://golfir.readthedocs.io/
    Source = https://github.com/gbrammer/golfir
    Tracker = https://github.com/gbrammer/golfir/issues
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

[options]
python_requires = >=3.7
install_requires =
    numpy
    scipy
    matplotlib
    astropy
    astroquery
    photutils
    lxml
    tqdm
    h5py
    scikit-image
packages = find:
include_package_data = True

[options.extras_require]
test =
    pytest>=5.1
    flake8
docs =
    sphinx
    sphinx-astropy

[options.package_data]
golfir.data =
    *header
    *zodi*
golfir.data.psf =
    *

[build_sphinx]
source_dir = docs
build_dir = docs/_build
all_files = 1

[build_docs]
source_dir = docs
build_dir = docs/_build
all_files = 1

[upload_docs]
upload_dir = docs/_build/html
show_response = 1

[tool:pytest]
minversion = 5.0
norecursedirs = build docs/_build
testpaths =
    golfir/tests

[flake8]
exclude = *parsetab.py,conftest.py,docs/conf.py,scripts/*
